--- a/templates/Webpages/audio_display.html
+++ b/templates/Webpages/audio_display.html
@@ -124,7 +124,7 @@
         <div id="Audio_player" class="shape">
             <div id="amazingaudioplayer-1" style="display:block;position:relative;width:300px;height:164px;margin:0px auto 0px;">
             <ul class="amazingaudioplayer-audios" style="display:none;">
-                <li data-artist="" data-title="{{ audio.title }}" data-album="" data-info="" data-image="" data-duration="0">
+                <li data-artist="" data-title="{{ audio.title }}" data-album="" data-info="" data-image="{{ audio.cover.url }}" data-duration="0">
                     <div class="amazingaudioplayer-source" data-src="{{ audio.audio.url }}" data-type="audio/mpeg" />
                 </li>
             </ul>
