--- a/templates/Webpages/video_display.html
+++ b/templates/Webpages/video_display.html
@@ -12,7 +12,8 @@
   <script src="/static/js/jquery.webcam.min.js"></script>
 </head>
   <body>
-    <div id="base" class="">
+  <input id="page_identify" style="display: none" value="{{ video.video }}">
+  <div id="base" class="">
   <div id='header'>
         <!-- Logo -->
         <div id='logo'>
@@ -102,7 +103,7 @@
   </div>
 
       <div id="Display_image">
-        <p id="Image_txt" class="h2">GIPFEL</p>
+        <p id="Image_txt" class="h2">{{ video.title }}</p>
         <img id="Image_bgd" class="shape" src="/static/images/video_display/u0.png"/>
         <div style="position: absolute;left: 150px;top: 30px;width: 1100px;height: 600px;"><div id="a1"></div></div>
 
@@ -111,10 +112,10 @@
           <p id="Image_download_txt" class="h2">Download</p>
           <a href="#"><img id="Image_like_icon" class="image" src="/static/images/video_display/u62.png"/></a>
           <p id="Image_like_txt" class="h2">Like</p>
-          <p id="Image_like_num" class="h2">111</p>
+          <p id="Image_like_num" class="h2">{{ video.like }}</p>
           <a href="#"><img id="Image_dislike_icon" class="image" src="/static/images/video_display/u68.png"/></a>
           <p id="Image_dislike_txt" class="h2">Dislike</p>
-          <p id="Image_dislike_num" class="h2">4</p>
+          <p id="Image_dislike_num" class="h2">{{ video.dislike }}</p>
           <a href="#"><img id="Image_collect_icon" class="shape" src="/static/images/video_display/u56.png"/></a>
           <p id="Image_collect_txt" class="h2">Collect</p>
         </div>
@@ -141,89 +142,66 @@
       <div id="Display_discription">
         <img id="Discription_bgd" class="shape" src="/static/images/video_display/u80.png"/>
         <p id="Discription_title" class="h2">Discription</p>
-        <img id="Discription_cover" src="/static/images/home/photo_1.jpg"/>
-        <p id="Discription_name" class="h2">GIPFEL</p>
-        <p id="Discription_txt" class="paragraph">Proin facilisis elit vitae mollis faucibus. Proin vitae massa nec mauris dictum consequat. Maecenas congue non felis a malesuada. Phasellus ullamcorper laoreet felis eu viverra. In at tincidunt tortor. Praesent tempor eros vitae elit dignissim, vitae elementum dui dapibus. Duis tristique, ligula eget lobortis accumsan, nibh enim venenatis urna, a commodo elit ex ac urna.</p>
+        <img id="Discription_cover" src="{{ video.cover.url }}"/>
+        <p id="Discription_name" class="h2">{{ video.title }}</p>
+        <p id="Discription_txt" class="paragraph">{{ video.discription }}</p>
       </div>
 
       <div id="Display_author">
         <img id="Author_bgd" class="shape" src="/static/images/video_display/u76.png"/>
         <p id="Author_txt" class="h2">Author</p>
-        <img id="Author_img" class="image" src="/static/images/video_display/image_u125.jpg"/>
-        <a href="/personal_page/{{ username }}"><p id="Author_name" class="h2">Starboy</p></a>
-        <p id="Author_discription" class="paragraph">Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.</p>
+        <img id="Author_img" class="image" src="{{ video.user.avatar.url }}"/>
+        <a href="/personal_page/{{ video.user.username }}"><p id="Author_name" class="h2">{{ video.user.username }}</p></a>
+        <p id="Author_discription" class="paragraph">{{ video.user.discription }}</p>
       </div>
 
       <div id="Display_recommand">
         <img id="Recommand_bgd" class="shape" src="/static/images/video_display/u86.png"/>
         <p id="Recommand_title" class="h2">Recommendation</p>
         <ul id="recommand">
-          <li id="item0">
-           <img class="recommand_img" src="/static/images/home/photo_1.jpg"/>
-           <a href="#"></a>
-           <p class="paragraph recommand_name">SCHW</p>
+            {% for foo in recommand_list %}
+          <li id="item{{ forloop.counter0 }}">
+           <img class="recommand_img" src="{{ foo.cover.url }}"/>
+           <a href="/playpage/{{ foo.video }}"></a>
+           <p class="paragraph recommand_name">{{ foo.title }}</p>
          </li>
-          <li id="item1">
-            <img class="recommand_img" src="/static/images/home/photo_3.jpg"/>
-            <a href="#"></a>
-            <p class="paragraph recommand_name">Maritime</p>
-          </li>
-          <li id="item2">
-            <img class="recommand_img" src="/static/images/video_display/u96.jpg"/>
-            <a href="#"></a>
-            <p class="paragraph recommand_name">Gipfel</p>
-          </li>
-          <li id="item3">
-            <img class="recommand_img" src="/static/images/video_display/u98.jpg"/>
-            <a href="#"></a>
-            <p class="paragraph recommand_name">Weite</p>
-          </li>
-          <li id="item4">
-            <img class="recommand_img" src="/static/images/video_display/u100.jpg"/>
-            <a href="#"></a>
-            <p class="paragraph recommand_name">Schwane</p>
-          </li>
+            {% endfor %}
         </ul>
       </div>
-
+    {% if carrent_user %}
       <div id="Write_comment">
         <p id="Comment_title" class="h2">Comments</p>
         <img id="Comment_bgd" class="ax_shape" src="/static/images/video_display/u143.png"/>
         <textarea id="Comment_input" class="ax_text_area"></textarea>
-        <img id="Comment_img" class="ax_image" data-label="Image" src="/static/images/video_display/image_u125.jpg"/>
-        <p id="Comment_name" class="h2" data-label="name">Starboy</p>
+        <img id="Comment_img" class="ax_image" data-label="Image" src="{{ carrent_user.avatar.url }}"/>
+        <p id="Comment_name" class="h2" data-label="name">{{ username }}</p>
         <a id="Comment_send" href="#" class="shape">
           <img id="send_button" src="/static/images/video_display/u150.png"/>
           <p id="send_txt" class="text">Send</p>
         </a>
       </div>
+    {% else %}
+      <div id="Write_comment">
+        <p id="Comment_title" class="h2">Comments</p>
+        <img id="Comment_bgd" class="ax_shape" src="/static/images/video_display/u143.png"/>
+
+      </div>
+    {% endif %}
 
       <div id="Display_comments">
         <ul>
+            {% for c in comments %}
           <li id="comment0" class="comments">
             <img class="shape Comments_bgd" src="/static/images/video_display/u123.png"/>
-            <a href="/personal_page/{{ username }}"><img class="image Comments_img" src="/static/images/video_display/image_u125.jpg"/></a>
-            <a href="/personal_page/{{ username }}"><p class="h2 Comments_name">Starboy</p></a>
+            <a href="/personal_page/{{ c.user.username }}"><img class="image Comments_img" src="{{ c.user.avatar.url }}"/></a>
+            <a href="/personal_page/{{ c.user.username }}"><p class="h2 Comments_name">{{ c.user.username }}</p></a>
             <!-- comment (Shape) -->
-            <p class="paragraph Comments_content" data-label="comment">Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.</p>
-            <a href="#"><img class="Comments_like_img" src="/static/images/video_display/u131.png"/></a>
-            <p class="paragraph Comments_like_num">5</p>
-            <p class="paragraph Comments_floor">#1</p>
-            <p class="paragraph Comments_date" data-label="Date">2016.11.6</p>
-            <p class="paragraph Comments_time" data-label="Time">11:48</p>
+            <p class="paragraph Comments_content" data-label="comment">{{ c.content }}</p>
+            <p class="paragraph Comments_floor">#{{ forloop.counter }}</p>
+            <p class="paragraph Comments_date" data-label="Date">{{ c.create_time.date }}</p>
+            <p class="paragraph Comments_time" data-label="Time">{{ c.create_time.time }}</p>
           </li>
-          <li id="comment1" class="comments">
-            <img class="shape Comments_bgd" src="/static/images/video_display/u123.png"/>
-            <a href="/personal_page/{{ username }}"><img class="image Comments_img" src="/static/images/video_display/image_u125.jpg"/></a>
-            <a href="/personal_page/{{ username }}"><p class="h2 Comments_name">Starboy</p></a>
-            <!-- comment (Shape) -->
-            <p class="paragraph Comments_content" data-label="comment">Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.</p>
-            <a href="#"><img class="Comments_like_img" src="/static/images/video_display/u131.png"/></a>
-            <p class="paragraph Comments_like_num">5</p>
-            <p class="paragraph Comments_floor">#1</p>
-            <p class="paragraph Comments_date" data-label="Date">2016.11.6</p>
-            <p class="paragraph Comments_time" data-label="Time">11:48</p>
-          </li>
+          {% endfor %}
         </ul>
         <div id="blank"></div>
         <!-- Footer -->
